# CG_project

./: CMakeLists.txt  L2Dsysteem.cpp  L3Dsysteem.cpp  L3Dsysteem.h  Light.cpp  Light.h  Lsysteem.cpp  README  ZBuffer.cpp  ZBuffer.h  drawTriangles.cpp  drawTriangles.h  easy_image.cc  easy_image.h  engine.cc
